[gd_scene load_steps=6 format=3 uid="uid://cb3aq06hbmdb1"]

[ext_resource type="Script" uid="uid://l4o83u1j5w4r" path="res://Main Menu/main_menu.gd" id="1_ku1ks"]
[ext_resource type="PackedScene" uid="uid://c71lh7ggbr04m" path="res://fade_transition.tscn" id="2_5ms5j"]
[ext_resource type="Texture2D" uid="uid://b841hlhvxuq2b" path="res://Main Menu/unic de (1).png" id="4_bgqmh"]
[ext_resource type="Texture2D" uid="uid://3jfhhfi8sbr5" path="res://Main Menu/bg blures.png" id="5_bgqmh"]
[ext_resource type="PackedScene" uid="uid://2k2i54h1dk8" path="res://Main Menu/character_body_2d.tscn" id="6_4wqtw"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ku1ks")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1536.0
offset_bottom = 1024.0
scale = Vector2(0.744844, 0.634304)
texture = ExtResource("5_bgqmh")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 120

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="gametitle" type="TextureRect" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_bgqmh")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="VBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
metadata/_edit_use_anchors_ = true

[node name="start" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/Control"]
layout_mode = 2
theme_override_colors/icon_hover_pressed_color = Color(1, 0, 0, 1)
text = "Start
"

[node name="settings" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/Control"]
layout_mode = 2
text = "Settings"

[node name="quit" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/Control"]
layout_mode = 2
text = "Quit"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 120

[node name="CharacterBody2D" parent="HBoxContainer/MarginContainer2" instance=ExtResource("6_4wqtw")]
position = Vector2(292, 313)
scale = Vector2(13.5276, 14.1184)

[node name="fade_transition" parent="." instance=ExtResource("2_5ms5j")]
visible = false
layout_mode = 0
offset_left = -3.05176e-05
offset_top = -1.52588e-05
scale = Vector2(2.34938, 2.31363)

[node name="fade_timer" type="Timer" parent="fade_transition"]

[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/Control/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/Control/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/Control/quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="fade_transition/fade_timer" to="." method="_on_fade_timer_timeout"]
